--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,7 +14,7 @@
 <h2>Transaction Cleaning Tool</h2>
 
 <div class="box">
-    <form action="/ui/upload" method="post" enctype="multipart/form-data">
+    <form action="jobs/ui/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file" required>
         <br><br>
         <button type="submit">Upload CSV</button>
